[package]
name = "card_games"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
bytemuck = "1"
ogl33 = { version = "0.2.0", feature = ["debug_error_checks"]}
beryllium = "0.2.0-alpha.4"
#nom = "7.1.3"
crossbeam-channel = "0.5"
futures = "0.3"


[dependencies.async-std]
version = "1.6"
features = ["attributes"]


[dev-dependencies]
imagine = "0.0.5"
